# Samousse-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  readme.md
examples/: auth_flow.rs
kubernetes/: .gitignore  pvc.yaml  samousse.yaml
src/: config.rs  discord.rs  inter_comm.rs  main.rs  message.rs  twitch.rs
src/discord/: bot.rs  message_response.rs  random_stuff.rs  twitch.rs
src/twitch/: auth.rs  websocket.rs
